# internal/dev_server/db/sqlite.go
@@ -16,6 +16,8 @@ type Sqlite struct {
 	database *sql.DB
 }
 
+var _ model.Store = Sqlite{}
+
 func (s Sqlite) GetDevProjectKeys(ctx context.Context) ([]string, error) {
 	rows, err := s.database.Query("select key from projects")
 	if err != nil {
@@ -70,13 +72,40 @@ func (s Sqlite) UpdateProject(ctx context.Context, project model.Project) (bool,
 		return false, errors.Wrap(err, "unable to marshal flags state when updating project")
 	}
 
-	result, err := s.database.ExecContext(ctx, `
+	tx, err := s.database.BeginTx(ctx, nil)
+	if err != nil {
+		return false, err
+	}
+	defer func() {
+		if err != nil {
+			_ = tx.Rollback()
+		}
+	}()
+	result, err := tx.ExecContext(ctx, `
 		UPDATE projects
 		SET flag_state = ?, last_sync_time = ?, context=?
 		WHERE key = ?;
 	`, flagsStateJson, project.LastSyncTime, project.Context.JSONString(), project.Key)
 	if err != nil {
 		return false, errors.Wrap(err, "unable to execute update project")
+	}
+
+	// Delete all and add all new variations. Definitely room for optimization...
+	_, err = tx.ExecContext(ctx, `
+		DELETE FROM available_variations
+		WHERE project_key = ?
+	`, project.Key)
+	if err != nil {
+		return false, err
+	}
+
+	err = InsertAvailableVariations(ctx, tx, project)
+	if err != nil {
+		return false, err
+	}
+	err = tx.Commit()
+	if err != nil {
+		return false, err
 	}
 
 	rowsAffected, err := result.RowsAffected()
@@ -104,6 +133,24 @@ func (s Sqlite) DeleteDevProject(ctx context.Context, key string) (bool, error) 
 		return false, nil
 	}
 	return true, nil
+}
+
+func InsertAvailableVariations(ctx context.Context, tx *sql.Tx, project model.Project) (err error) {
+	for _, variation := range project.AvailableVariations {
+		jsonValue, err := variation.Value.MarshalJSON()
+		if err != nil {
+			return err
+		}
+		_, err = tx.ExecContext(ctx, `
+			INSERT INTO available_variations
+				(project_key, flag_key, id, value, description, name)
+			VALUES (?, ?, ?, ?, ?, ?)
+		`, project.Key, variation.FlagKey, variation.Id, string(jsonValue), variation.Description, variation.Name)
+		if err != nil {
+			return err
+		}
+	}
+	return nil
 }
 
 func (s Sqlite) InsertProject(ctx context.Context, project model.Project) (err error) {
@@ -148,8 +195,59 @@ VALUES (?, ?, ?, ?, ?)
 	if err != nil {
 		return
 	}
-	err = tx.Commit()
-	return
+
+	err = InsertAvailableVariations(ctx, tx, project)
+	if err != nil {
+		return err
+	}
+	return tx.Commit()
+}
+
+func (s Sqlite) GetAvailableVariationsForProject(ctx context.Context, projectKey string) (map[string][]model.Variation, error) {
+	rows, err := s.database.QueryContext(ctx, `
+			SELECT flag_key, id, name, description, value
+			FROM available_variations
+			WHERE project_key = ?
+		`, projectKey)
+
+	if err != nil {
+		return nil, err
+	}
+
+	availableVariations := make(map[string][]model.Variation)
+	for rows.Next() {
+		var flagKey string
+		var id string
+		var nameNullable sql.NullString
+		var descriptionNullable sql.NullString
+		var valueJson string
+
+		err = rows.Scan(&flagKey, &id, &nameNullable, &descriptionNullable, &valueJson)
+		if err != nil {
+			return nil, err
+		}
+
+		var value ldvalue.Value
+		err = json.Unmarshal([]byte(valueJson), &value)
+		if err != nil {
+			return nil, err
+		}
+
+		var name, description *string
+		if nameNullable.Valid {
+			name = &nameNullable.String
+		}
+		if descriptionNullable.Valid {
+			description = &descriptionNullable.String
+		}
+		availableVariations[flagKey] = append(availableVariations[flagKey], model.Variation{
+			Id:          id,
+			Name:        name,
+			Description: description,
+			Value:       value,
+		})
+	}
+	return availableVariations, nil
 }
 
 func (s Sqlite) GetOverridesForProject(ctx context.Context, projectKey string) (model.Overrides, error) {
@@ -267,6 +365,11 @@ func (s Sqlite) runMigrations(ctx context.Context) error {
 	if err != nil {
 		return err
 	}
+	defer func() {
+		if err != nil {
+			_ = tx.Rollback()
+		}
+	}()
 	_, err = tx.Exec(`
 	CREATE TABLE IF NOT EXISTS projects (
 		key text PRIMARY KEY,
@@ -291,5 +394,21 @@ func (s Sqlite) runMigrations(ctx context.Context) error {
 	if err != nil {
 		return err
 	}
+
+	_, err = tx.Exec(`
+	CREATE TABLE IF NOT EXISTS available_variations (
+		project_key text NOT NULL,
+		flag_key text NOT NULL,
+		id text NOT NULL,
+		value text NOT NULL, 
+		description text,
+		name text,
+		FOREIGN KEY (project_key) REFERENCES projects (key) ON DELETE CASCADE,
+		UNIQUE (project_key, flag_key, id) ON CONFLICT REPLACE
+	)`)
+	if err != nil {
+		return err
+	}
+
 	return tx.Commit()
 }
